--- a/SamSeifert.Velodyne.csproj
+++ b/SamSeifert.Velodyne.csproj
@@ -56,8 +56,13 @@
       <DependentUpon>Form_VLP_16.cs</DependentUpon>
     </Compile>
     <Compile Include="Frame.cs" />
+    <Compile Include="JsonDict.cs" />
+    <Compile Include="JsonPackable.cs" />
+    <Compile Include="Processor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DataStructures.cs" />
+    <Compile Include="SinglePointExtension.cs" />
+    <Compile Include="UnitConverter.cs" />
     <Compile Include="VLP_16.cs" />
     <Compile Include="VLP_16_Framer.cs" />
     <EmbeddedResource Include="Form_VLP_16.resx">
@@ -85,12 +90,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\SamSeifert.Utilities\SamSeifert.Utilities.csproj">
-      <Project>{a9446cbe-818f-45f6-8894-068693da47ca}</Project>
-      <Name>SamSeifert.Utilities</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
